# featherbox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  build-linux.sh  build-macos.sh  build-windows.bat  build.rs  compose.yml  database.db  differential_execution_design.md  flake.nix  package.json  playwright.config.ts
.claude/: settings.json
.claude/agents/: programmer.md  qa-engineer.md  requirements-analyst.md  reviewer.md  technical-lead-planner.md
.claude/commands/: dev.md
.github/workflows/: release.yml
a/: .gitignore  project.yml  secrets.enc
e2e/: core.spec.ts
examples/simple/: project.yml  test_query.sql
examples/simple/adapters/: logs.yml  time_series_sensors.yml
examples/simple/models/: analysis_logs.yml  sensor_summary.yml
examples/simple/test_data/app_logs/: logs_2024_01.json  logs_2024_02.json  logs_2024_03.json
issues/: 001-data-level-change-detection.md  002-runtime-configuration-change-detection.md  003-automatic-graph-migration.md  004-flexible-execution-control-and-error-handling.md  adapter-model-settings-change-detection.md  deleted-nodes-cleanup.md  edge-case-validation-and-cleanup.md
migration/src/: lib.rs
src/: api.rs  commands.rs  config.rs  database.rs  dependency.rs  ducklake.rs  graph.rs  impact_analysis.rs  lib.rs  main.rs  metadata.rs  pipeline.rs  project.rs  s3_client.rs  secret.rs  status.rs  test_helpers.rs  ui.rs  workspace.rs
src/api/: adapter.rs  chat.rs  connection.rs  dashboard.rs  migrate.rs  model.rs  pipeline.rs  query.rs  run.rs  secret.rs
src/commands/: adapter.rs  connection.rs  init.rs  migrate.rs  mod.rs  model.rs  new.rs  query.rs  run.rs  samples.rs  secret.rs  start.rs  workspace.rs
src/commands/templates/: adapter.yml  model.yml  project.yml  sqlite-adapter.yml
src/config/: adapter.rs  dashboard.rs  mod.rs  model.rs  project.rs  query.rs
src/core/: graph.rs
src/database/: connection.rs
src/database/entities/: deltas.rs  edges.rs  graphs.rs  mod.rs  nodes.rs  pipeline_actions.rs  pipelines.rs
src/database/migration/: m20240101_000001_create_metadata_tables.rs  m20240102_000001_add_range_to_pipeline_actions.rs  m20240103_000001_remove_range_from_pipeline_actions.rs  m20240104_000001_add_config_json_to_nodes.rs  m20240105_000001_add_last_updated_at_to_nodes.rs  m20240106_000001_add_execution_status.rs  m20241201_000001_add_delta_tables.rs  mod.rs
src/dependency/: graph.rs  impact_analysis.rs  metadata.rs
src/entities/: edges.rs  graphs.rs  mod.rs
src/migration/: mod.rs
src/pipeline/: adapter.rs  build.rs  database.rs  delta.rs  ducklake.rs  execution.rs  file_pattern.rs  file_processor.rs  importer.rs  logger.rs  mod.rs  model.rs  state_manager.rs  status.rs  transformer.rs
src/ui/: package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
src/ui/src/: App.svelte  app.css
src/ui/src/lib/: i18n.ts  (+24 more)
system_test/: package.json
system_test/tests/: core.spec.ts  helpers.ts
tests/: integration_test.rs
tests/common/: mod.rs
tests/fixtures/: project.yml
tests/fixtures/adapters/: mysql_users.yml  postgres_users.yml  sales_data.yml  sqlite_products.yml  sqlite_users.yml  time_series_sensors.yml
tests/fixtures/models/: mysql_user_stats.yml  postgres_user_stats.yml  product_summary.yml  sales_summary.yml  user_stats.yml
tests/fixtures/s3_test_data/: sales_202301.json  sales_202302.json
tests/fixtures/test_data/: test_data.yml
(+14 files in other folders)
