[package]
name = "featherbox"
version = "0.1.0"
edition = "2024"

[lib]
name = "featherbox"
path = "src/lib.rs"

[[bin]]
name = "fbox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
duckdb = "1.1.3"
inquire = "0.7"
glob = "0.3"
regex = "1.0"
sea-orm = { version = "1.1.14", features = [ "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = { version = "1.1.0", features = [ "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls" ] }
sqlparser = "0.58.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.5.0", features = ["v4"] }
yaml-rust2 = "0.10.3"

[dev-dependencies]
tempfile = "3.8"
rusqlite = "0.32"
