[package]
name = "featherbox"
version = "0.1.0"
edition = "2024"

[lib]
name = "featherbox"
path = "src/lib.rs"

[[bin]]
name = "fbox"
path = "src/main.rs"

[dependencies]
ring = "0.17"
base64 = "0.22"
anyhow = "1.0.98"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
duckdb = { version = "1.1.3", features = ["r2d2"] }
r2d2 = "0.8"
fastrand = "2.0"
inquire = "0.7"
glob = "0.3"
regex = "1.0"
sea-orm = { version = "1.1.14", features = [ "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = { version = "1.1.0", features = [ "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
sqlparser = "0.58.0"
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.5.0", features = ["v4"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = { version = "8.5.0", features = ["include-exclude"] }
mime_guess = "2.0.5"

[build-dependencies]
anyhow = "1.0"

[features]
default = []
bundled = ["duckdb/bundled"]

[dev-dependencies]
rusqlite = "0.32"
